# RayTracer

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
cmake/: AddFlagIfSupported.cmake  GetCoverageFlags.cmake
lib/: CMakeLists.txt  Camera.cpp  Camera.h  IntersectionResult.h  Material.h  MaterialManager.h  Mesh.cpp  Mesh.h  Object3d.h  PointLight.h  Ray.cpp  Ray.h  Sphere.cpp  Sphere.h
main/: CMakeLists.txt
scripts/: build.py
test/: CMakeLists.txt  CameraTests.cpp  MeshTests.cpp  RayTests.cpp  SphereTests.cpp  Tests.h  TestsMain.cpp
test/Camera/: CMakeLists.txt  Tests.cpp
test/Components/: CMakeLists.txt  Tests.cpp
